--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,9 @@ textarea {
 
 body {
     font: 16px/26px Helvetica, Helvetica Neue, Arial;
+
+    background: url('../img/bg.jpg') no-repeat;
+    background-size: cover;
 }
 
 .wrapper {
@@ -74,24 +77,7 @@ body {
     ALL: Orange Theme
    =================== */
 
-.header-container {
-    border-bottom: 20px solid #e44d26;
-}
 
-.footer-container,
-.main aside {
-    border-top: 20px solid #e44d26;
-}
-
-.header-container,
-.footer-container,
-.main aside {
-    background: #f16529;
-}
-
-.title {
-    color: white;
-}
 
 /* ==============
     MOBILE: Menu
@@ -105,19 +91,18 @@ nav ul {
 nav a {
     display: block;
     margin-bottom: 10px;
-    padding: 15px 0;
+    padding: 7px 0;
 
     text-align: center;
     text-decoration: none;
     font-weight: bold;
 
-    color: white;
-    background: #e44d26;
+    color: #444;
 }
 
 nav a:hover,
 nav a:visited {
-    color: white;
+    color: #000;
 }
 
 nav a:hover {
@@ -136,9 +121,9 @@ nav a:hover {
     font-size: 2em;
 }
 
-.main aside {
+.main nav {
     color: white;
-    padding: 0px 5% 10px;
+    /* padding: 0px 5% 10px; */
 }
 
 .footer-container footer {
@@ -183,11 +168,12 @@ nav a:hover {
    ==================== */
 
     nav a {
-        float: left;
-        width: 27%;
-        margin: 0 1.7%;
-        padding: 25px 2%;
+        float: none;
+        width: 100%;
+        /* margin: 0 1.7%; */
+        /* padding: 25px 2%; */
         margin-bottom: 0;
+        text-align: left;
     }
 
     nav li:first-child a {
@@ -217,12 +203,6 @@ nav a:hover {
     WIDE: CSS3 Effects
    ==================== */
 
-    .header-container,
-    .main aside {
-        -webkit-box-shadow: 0 5px 10px #aaa;
-           -moz-box-shadow: 0 5px 10px #aaa;
-                box-shadow: 0 5px 10px #aaa;
-    }
 
 /* ============
     WIDE: Menu
@@ -232,22 +212,22 @@ nav a:hover {
         float: left;
     }
 
-    nav {
+    /* nav {
         float: right;
         width: 38%;
-    }
+    } */
 
 /* ============
     WIDE: Main
    ============ */
 
     .main article {
-        float: left;
+        float: right;
         width: 57%;
     }
 
-    .main aside {
-        float: right;
+    .main nav {
+        float: left;
         width: 28%;
     }
 }
