--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,9 @@ nav a:hover {
         width: 70%;
         background-color:rgba(255,255,255,0.9);
         padding: 0 30px;
+        -moz-box-shadow: 0 0 5px #888;
+-webkit-box-shadow: 0 0 5px#888;
+box-shadow: 0 0 5px #888;
     }
 
     .main nav {
