--- a/css/main.css
+++ b/css/main.css
@@ -168,8 +168,10 @@ nav a:hover {
 blockquote {
     border-left: 1px solid #444;
     margin-left: 20px;
+    margin-top: 20px;
     padding-left: 20px;
 }
+
 
 
 
