--- a/css/main.css
+++ b/css/main.css
@@ -168,8 +168,12 @@ nav a:hover {
 blockquote {
     border-left: 1px solid #444;
     margin-left: 20px;
-    margin-top: 40px;
+    margin-top: 20px;
     padding-left: 20px;
+}
+
+cite {
+    margin-bottom: 20px;
 }
 
 
