made background fixed

--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,7 @@ textarea {
 body {
     font-size: 16px/26px Helvetica, Helvetica Neue, Arial;
 
-    background: url('../img/bg.jpg') no-repeat;
-    background-size: cover;
+    background: url('../img/bg.jpg') no-repeat fixed;
     font-family: 'telegraphemregular';
 }
 
