--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ textarea {
 body {
     font-size: 16px/26px Helvetica, Helvetica Neue, Arial;
 
-    background: url('../img/bg.jpg') no-repeat center -100px;
+    background: url('../img/bg.jpg') no-repeat center bottom auto -100px;
     background-size: cover;
     background-attachment: fixed;
     font-family: 'telegraphemregular';
