changed background size

--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ body {
     font-size: 16px/26px Helvetica, Helvetica Neue, Arial;
 
     background: url('../img/bg.jpg') no-repeat center bottom;
+    background-size: 100%;
     background-attachment: fixed;
     font-family: 'telegraphemregular';
 }
