--- a/css/main.css
+++ b/css/main.css
@@ -275,8 +275,9 @@ iframe {
         background-color:rgba(255,255,255,0.9);
         padding: 0 30px 30px 30px;
         -moz-box-shadow: 0 0 5px #888;
--webkit-box-shadow: 0 0 5px#888;
-box-shadow: 0 0 5px #888;
+        -webkit-box-shadow: 0 0 5px#888;
+        box-shadow: 0 0 5px #888;
+        min-height: 400px;
     }
 
     .main nav {
