--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,7 @@ blockquote {
     margin-left: 20px;
     margin-top: 40px;
     padding-left: 20px;
+    font-family: 'Libre Baskerville', serif;
 }
 
 cite {
