--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ body {
     background-position: center bottom;
     background-size: 100% auto;
     background-attachment: fixed;
-    font-family: 'telegraphemregular';
+    font-family: 'Libre Baskerville', serif;
 
     color: #444;
 }
